--- a/routes/requerimento/index-add-product.html
+++ b/routes/requerimento/index-add-product.html
@@ -193,7 +193,7 @@
                                             </svg>                                            
                                     </td>
                                     <td>
-                                        <a href="index-edit-product.html" class="btn-edit mx-2">Editar</a>
+                                        <a href="index-edit-product.html" class="btn-edit-product mx-2">Editar</a>
                                         <a href="#" class="btn-trash">excluir</a>
                                     </td>
                                 </tr>
@@ -212,7 +212,7 @@
                                         </defs>
                                         </svg>     </td>
                                     <td>
-                                        <a href="index-edit-product.html" class="btn-edit mx-2">Editar</a>
+                                        <a href="index-edit-product.html" class="btn-edit-product mx-2">Editar</a>
                                         <a href="#" class="btn-trash">excluir</a>
                                     </td>                            
                                 </tr>
@@ -231,7 +231,7 @@
                                         </defs>
                                         </svg> </td>
                                     <td>
-                                        <a href="index-edit-product.html" class="btn-edit mx-2">Editar</a>
+                                        <a href="index-edit-product.html" class="btn-edit-product mx-2">Editar</a>
                                         <a href="#" class="btn-trash">excluir</a>
                                     </td>
                                 </tr>
@@ -249,7 +249,7 @@
                                         </clipPath>
                                         </defs>
                                         </svg> </td>
-                                    <td><a href="index-edit-product.html" class="btn-edit mx-2">Editar</a>
+                                    <td><a href="index-edit-product.html" class="btn-edit-product mx-2">Editar</a>
                                         <a href="#" class="btn-trash">excluir</a></td>
                                 </tr>
                                 <tr>
@@ -267,7 +267,7 @@
                                         </defs>
                                         </svg></td>
                                     <td>
-                                        <a href="index-edit-product.html" class="btn-edit mx-2">Editar</a>
+                                        <a href="index-edit-product.html" class="btn-edit-product mx-2">Editar</a>
                                         <a href="#" class="btn-trash">excluir</a></td>
                                 </tr>
                             </tbody>
