--- a/routes/index-recebidos.html
+++ b/routes/index-recebidos.html
@@ -129,8 +129,9 @@
                         </button>
                     </div>
                     <div class="col input-search ">
-                        <input type="text" class="form-control shadow-none" arial-label="exemple" placeholder="Buscar por nome, departamento"/>
-                        <button>
+                        <input type="text" class="form-control shadow-none" arial-label="exemple" 
+                        placeholder="Buscar por título, solicitante, setor, data, status ou prioridade"/>
+                        <button class="btn-search">
                             <svg width="18" height="18" viewBox="0 0 18 18" fill="rgb(196, 196, 196)" xmlns="http://www.w3.org/2000/svg">
                             <path d="M11.5365 11.18L11.6091 11.25H11.71H12.3963L17.1366 15.9998L15.9998 17.1366L11.25 12.3963V11.71V11.6091L11.18 11.5365L10.91 11.2565L10.7461 11.0865L10.567 11.2404C9.47058 12.183 8.04787 12.75 6.5 12.75C3.04807 12.75 0.25 9.95193 0.25 6.5C0.25 3.04807 3.04807 0.25 6.5 0.25C9.95193 0.25 12.75 3.04807 12.75 6.5C12.75 8.04787 12.183 9.47058 11.2404 10.567L11.0865 10.7461L11.2565 10.91L11.5365 11.18ZM1.75 6.5C1.75 9.12807 3.87193 11.25 6.5 11.25C9.12807 11.25 11.25 9.12807 11.25 6.5C11.25 3.87193 9.12807 1.75 6.5 1.75C3.87193 1.75 1.75 3.87193 1.75 6.5Z" fill="#C4C4C4" stroke="white" stroke-width="0.5"/>
                             </svg>
