finalização de chamada

--- a/routes/Detalhes-da-Chamada/enviados-view.html
+++ b/routes/Detalhes-da-Chamada/enviados-view.html
@@ -7,19 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/img/logo-favicon.png" type="image/x-icon">
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="/style/main.css">
-    <link rel="stylesheet" href="/style/nav/header.css">
-    <link rel="stylesheet" href="/style/nav/navbar.css">
-    <link rel="stylesheet" href="/style/search/search.css">
-    <link rel="stylesheet" href="/style/table/light-green.css">
-    <link rel="stylesheet" href="/style/Tag/tags.css">
+    <link rel="stylesheet" type="text/css" href="/uniavan/style/main.css">
+    <link rel="stylesheet" href="/uniavan/style/nav/header.css">
+    <link rel="stylesheet" href="/uniavan/style/nav/navbar.css">
+    <link rel="stylesheet" href="/uniavan/style/search/search.css">
+    <link rel="stylesheet" href="/uniavan/style/table/light-green.css">
+    <link rel="stylesheet" href="/uniavan/style/Tag/tags.css">
     <!--tags-->
-    <link rel="stylesheet" href="/style/card/detalhe-card.css">
+    <link rel="stylesheet" href="/uniavan/style/card/detalhe-card.css">
 
-    <link rel="stylesheet" href="/style/card/view-config-chamada.css">
-    <link rel="stylesheet" href="/style/card/View-perfil.css">
-    <link rel="stylesheet" href="/style/filter/filter.css">
-    <link rel="stylesheet" href="/js/jquery-ui.min.css">
+    <link rel="stylesheet" href="/uniavan/style/card/view-config-chamada.css">
+    <link rel="stylesheet" href="/uniavan/style/card/View-perfil.css">
+    <link rel="stylesheet" href="/uniavan/style/filter/filter.css">
+    <link rel="stylesheet" href="/uniavan/js/jquery-ui.min.css">
     <!-- Fonte -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
