--- a/routes/index-historico.html
+++ b/routes/index-historico.html
@@ -37,19 +37,19 @@
                 <img src="/img/Logo M.png" alt="">
             </div>
             <ul>
-                <a href="/index.html">
+                <a href="index-enviados.html">
                     <li class="pagina-atual">Chamadas</li>
                 </a>
-                <a href="/routes/Departamento/gestores/view-membros-gestor.html">
+                <a href="routes/Departamento/gestores/view-membros-gestor.html">
                     <li>Departamento</li>
                 </a>
-                <a href="/routes/index-profile.html">
+                <a href="routes/index-profile.html">
                     <li>Perfil</li>
                 </a>
-                <a href="/routes/index-ajuda.html">
+                <a href="routes/index-ajuda.html">
                     <li>Ajuda</li>
                 </a>
-                <a href="/routes/index-login.html" class="logout">
+                <a href="routes/index-login.html" class="logout">
                     <li>Logout</li>
                 </a>
             </ul>
@@ -64,7 +64,7 @@
                 <img src="/img/Logo M.png" alt="">
             </div>
             <ul>
-                <a href="/index.html"> <li class="pagina-atual">Chamadas</li></a>
+                <a href="routes/index-enviados.html"> <li class="pagina-atual">Chamadas</li></a>
                 <a href="/routes/Departamento/Adm/view-membros-adm.html"><li>Departamento</li></a>
                 <a href="/routes/index-profile.html"><li>Perfil</li></a>
                 <a href="/routes/index-ajuda.html"><li>Ajuda</li></a> 
@@ -114,7 +114,7 @@
                     <div class="menu">
                         <div class="suspenso">
                             <ul>
-                                <a href="/index.html">
+                                <a href="index-enviados.html">
                                     <li>Enviados</li>
                                 </a>
                                 <a href="index-recebidos.html" rel="noopener noreferrer">
