--- a/routes/requerimento/index-requerimento.html
+++ b/routes/requerimento/index-requerimento.html
@@ -41,7 +41,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container requeriment">
         <div class="nav">
             <div>
                 <img src="/img/Logo M.png" alt="">
@@ -60,11 +60,9 @@
 
         <div class="row">
             <div class="col">
-                <header class="d-flex justify-content-between px-4">
+                <header class="d-flex justify-content-between px-4 requeriment">
                     <div class=" pt-4">
                         <button class="btn-back-page" onclick="history.back()">
-
-
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -75,7 +73,7 @@
                     </div>
 
 
-                    <div class="d-flex flex-row align-middle">
+                    <div class="d-flex flex-row align-middle profile-requeriment">
                         <div class="card-profile pt-4 pe-2">
                             <h4>Vinicius Alfredo</h4>
                             <p>Financeiro</p>
@@ -117,7 +115,7 @@
                             </p>
                             <br>
                             <div class="row pb-5">
-                                <div class="d-flex pb-2">
+                                <div class="d-flex pb-2 box-sm-requeriment">
                                     <div class="box-select-item pe-5">
                                         <div class="d-flex">
                                             <p>Selecione o polo</p> <span><img class="icon-help"
@@ -193,7 +191,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="d-flex pt-3 box-add">
+                                <div class="d-flex pt-3 box-add  box-sm-requeriment">
                                     <div class="box-select-item pe-5">
                                         <div class="d-flex">
                                             <p>Título</p> <span><img class="icon-help" src="/img/alert-circle.svg"
@@ -204,7 +202,7 @@
                                                 class="form-control">
                                         </div>
                                     </div>
-                                    <div class="box-select-item ps-2">
+                                    <div class="box-select-item">
                                         <div class="d-flex">
                                             <p>Ramal<span><img class="icon-help" src="/img/alert-circle.svg"
                                                         alt="" srcset=""></span> <span class="tag-red">*</span></p>
@@ -228,7 +226,7 @@
                                         </svg>
                                         </div>
                                     </div>
-                                    <div class="box-select-item ps-5">
+                                    <div class="box-select-item">
                                         <div class="d-flex">
                                             <p>Prioridade<span><img class="icon-help" src="/img/alert-circle.svg"
                                                         alt="" srcset=""></span> <span class="tag-red">*</span></p>
