--- a/notification.html
+++ b/notification.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container notion">
         <div class="nav">
             <div>
                 <img src="/img/Logo M.png" alt="">
