--- a/routes/requerimento/index-confirmar.html
+++ b/routes/requerimento/index-confirmar.html
@@ -40,7 +40,7 @@
     <title>Chamadas/ Nova solicitação</title>
 </head>
 
-<body   >
+<body>
     <div class="container" >
         <div class="nav">
             <div>
@@ -61,8 +61,7 @@
        
  <!------>
  <div class="wallpaper">
- 
-    <div class="row" >
+     <div class="row" >
         <div class="col d-flex justify-content-center align-content-center">
             <div class="card-feedback mt-5">
                 <div class="d-flex ">
@@ -138,21 +137,12 @@
 <!----->
 <div class="row mt-5">
     <div class="col  d-flex justify-content-center menu">
-        <!-- <div class="suspenso">
-            <ul>
-                <a href="#" class="aba-atual">
-                    <li>Solitação</li>
-                </a>
-                <a href="index-add-product.html">
-                    <li>Adicionar novo produto</li>
-                </a>
-
-            </ul>
-        </div> -->
+     
     </div>
 </div>
 
-<div class="row  mt-5">
+ <!-----WALLPAPER--->
+<!-- <div class="row  mt-5">
     <div class="col d-flex justify-content-center">
         <div class="card-requeriment">
             <h4>Nova solicitação</h4>
@@ -428,7 +418,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
             <script src="https://code.jquery.com/jquery-3.0.0.min.js" type="text/javascript"></script>
             <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
                 integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
