--- a/routes/Departamento/Adm/view-membros-adm.html
+++ b/routes/Departamento/Adm/view-membros-adm.html
@@ -78,7 +78,7 @@
                         </div>
                         <div>
                             <div class="profile">
-                                <img src="img/profile.png" alt="">
+                                <img src="/img/profile.png" alt="">
                             </div>
                             <div class="notification">
                                 <img src="img/icon-notification.png" alt="">
